# fsh

./: ChangeLog  Makefile.am  README  a.out  bootstrap  configure.ac  reconf  shell  shell.c  utils.c
include/: env.h
src/: Makefile.am  builtins.c  env.c  env.h  lexer.l  list.h  parser.c  parser.l  parser.y  parsing.h  shell.c  shell.h  token.l  utils.c
